# hyperframe

./: .gitignore  BUSINESS.md  CLAUDE.md  LICENSE  README.md  ROADMAP.md  VALIDATION.md  package-lock.json  package.json  tsconfig.base.json
.github/workflows/: release.yml
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
scripts/: make-icon.mjs
site/: README.md  index.html
site/downloads/: HyperFrame_0.2.10_aarch64.dmg  HyperFrame_0.2.10_aarch64.dmg.sha256  HyperFrame_0.2.13_aarch64.dmg  HyperFrame_0.2.13_aarch64.dmg.sha256  HyperFrame_0.2.13_x64-setup.exe.sha256  HyperFrame_0.2.14_aarch64.dmg  HyperFrame_0.2.14_aarch64.dmg.sha256  HyperFrame_0.2.14_x64-setup.exe.sha256  HyperFrame_0.2.15_aarch64.dmg  HyperFrame_0.2.15_aarch64.dmg.sha256  HyperFrame_0.2.15_x64-setup.exe.sha256  HyperFrame_0.2.16_aarch64.dmg  HyperFrame_0.2.16_aarch64.dmg.sha256  HyperFrame_0.2.16_x64-setup.exe.sha256  HyperFrame_0.2.17_aarch64.dmg  HyperFrame_0.2.17_aarch64.dmg.sha256  HyperFrame_0.2.17_x64-setup.exe.sha256  HyperFrame_0.2.19_aarch64.dmg  HyperFrame_0.2.19_aarch64.dmg.sha256  HyperFrame_0.2.19_x64-setup.exe.sha256  HyperFrame_0.2.21_aarch64.dmg  HyperFrame_0.2.21_aarch64.dmg.sha256  HyperFrame_0.2.21_x64-setup.exe.sha256  HyperFrame_0.2.23_aarch64.dmg  HyperFrame_0.2.23_aarch64.dmg.sha256  HyperFrame_0.2.23_x64-setup.exe.sha256  HyperFrame_0.2.24_aarch64.dmg  HyperFrame_0.2.24_aarch64.dmg.sha256  HyperFrame_0.2.25_aarch64.dmg  (+33 more)
(+50 files in other folders)
