[package]
name = "hyperframe"
version = "0.2.0"
description = "HyperFrame — Análise e dimensionamento estrutural (ABNT)"
authors = ["Cândido Alfredo"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
strip = true
lto = true
codegen-units = 1
